FEATURE: Add an option to allow multiple instances of Krita

Probably most useful for developers and really busy people like
Bollebib with really big hardware. Others are probably better
of loading resources only once.

BUG:377199
CCMAIL:kimageshop@kde.org